# palo-python-bootcamp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cybr_override.py  pyproject-with-internal-dependencies.toml  pyproject-without-internal-dependencies.toml  pyproject.toml  todo.txt
docs/: architecture.md  argument-unpacking.md  course-agenda.md  function-arguments.md
exercises/: exercise_argument_unpacking.py  exercise_comprehensions.py  exercise_comprehensions_solution.py  exercise_context_managers.py  exercise_context_managers_solution.py  exercise_decorators.py  exercise_decorators_solution.py  exercise_dunder_methods.py  exercise_dunder_methods_solution.py  exercise_field_constraints.py  exercise_field_constraints_solution.py  exercise_function_args.py  exercise_function_args_solution.py  exercise_function_signatures.py  exercise_mutable_defaults.py  exercise_mutable_defaults_solution.py  exercise_serialization.py  exercise_serialization_solution.py  exercise_testing.py  exercise_testing_solution.py  exercise_validators.py  exercise_validators_solution.py
solutions/: exercise_argument_unpacking_solution.py  exercise_comprehensions_solution.py  exercise_context_managers_solution.py  exercise_dunder_methods_solution.py  exercise_field_constraints_solution.py  exercise_function_signatures_solution.py  exercise_mutable_defaults_solution.py  exercise_serialization_solution.py  exercise_testing_solution.py  exercise_validators_solution.py
tests/: test_booking_service.py
ticketing_system/: cache.py  comprehensions.py  context_managers.py  decorators.py  exceptions.py  (+3 more)
(+12 files in other folders)
